--- a/srings and factors.Rmd
+++ b/srings and factors.Rmd
@@ -131,3 +131,63 @@ data_marj %>%
   theme(axis.text.x = element_text(angle = 90, hjust =1)) 
 ```
 
+
+## Resturant inspections
+
+```{r}
+data("rest_inspec")
+
+rest_inspec %>% slice(1:100) %>% view()
+```
+
+```{r}
+rest_inspec %>%
+  group_by(boro,grade) %>%
+  summarize(count = n()) 
+```
+
+```{r}
+rest_inspec %>%
+  janitor::tabyl(boro,grade)
+```
+
+```{r}
+rest_inspec = 
+  rest_inspec %>%
+  filter(
+    str_detect(grade,"[ABC]"),
+    !(boro == "Missing")
+  ) %>% 
+  mutate(boro = str_to_title(boro))
+```
+
+```{r}
+rest_inspec %>%
+  filter(str_detect(dba,"[Pp][Ii][Zz][Zz][Aa]")) %>%
+  janitor::tabyl(boro,grade)
+```
+
+
+```{r}
+rest_inspec %>%
+  filter(str_detect(dba,"[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro)
+  ) %>%
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
+changing a label
+```{r}
+rest_inspec %>%
+  filter(str_detect(dba,"[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = fct_recode(boro,"The City" = "Manhattan")  # str_replace work tricky
+  ) %>%
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+
+
+```
